Fixes for collapsed table display
- Fix contrast between text and background (values from https://github.com/wikimedia/wikipedia-ios/blob/develop/WMF%20Framework/Theme.swift)
- Fix tables not expanding to the full width (display: block)
- Fix title having odd sorting and including reference link text

Bug: T247702

--- a/pagelib/src/transform/CollapseTable.css
+++ b/pagelib/src/transform/CollapseTable.css
@@ -115,7 +115,7 @@ div.pcs-collapse-table-container {
   width: 100%;
   padding: 12px 48px 12px 12px;
   line-height: 120%;
-  background-color: #f8f8f8;
+  background-color: #f8f9fa;
   background-repeat: no-repeat;
   background-position: 95% 50%;
   background-size: 16px 16px;
@@ -123,7 +123,11 @@ div.pcs-collapse-table-container {
 
 /* The outermost table container header's subcaption text. */
 .pcs-collapse-table-collapse-text {
-  color: #808080;
+  color: #72777d;
+}
+
+.pcs-theme-sepia span.pcs-collapse-table-collapse-text {
+  color: #646059;
 }
 
 .pcs-theme-dark span.pcs-collapse-table-collapse-text,
@@ -134,11 +138,11 @@ div.pcs-collapse-table-container {
 /* The outermost table container's footer. */
 .pcs-collapse-table-collapsed-bottom {
   width: 100%;
-  color: #808080;
+  color: #72777d;
   padding: 12px 48px 12px 12px;
   line-height: 120%;
   border-radius: 0 0 2px 2px;
-  background-color: #f8f8f8;
+  background-color: #f8f9fa;
   background-repeat: no-repeat;
   background-position: 95% 50%;
   background-size: 16px 16px;
@@ -185,7 +189,6 @@ div.pcs-collapse-table-container {
    undoing some of https://gerrit.wikimedia.org/r/c/mediawiki/skins/MinervaNeue/+/428868
    but only for tables we collapse. */
 .pcs-collapse-table-container table {
-    display: block;
     width: 100% !important;
     height: initial !important;
 }
